# rmtool

./: .dockerignore  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CRITICAL_ASSESSMENT.md  LICENSE  Makefile  PARALLELISM.md  QUICKSTART.md  README.md  TODO.cubestat.md  TODO.double-buffer-overlap.md  TODO.gpu  TODO.logging.md  build.sh  cmake_build.sh  runtime_estimate.txt  sampled_L_sq_good.txt  sampled_RM.txt  sampled_freq.txt  tile_autotune.cfg  tmp.txt
cfg/: CONFIG_README.md  askap_nan_channels.burdies  benchmark.cfg  example_beamLog.csv  example_beamLog.txt  example_myfits_spec2rm.cfg  myfits_spec2rm.cfg  reproject_cubes.cfg  rmsynth-casa-fullim-test.cfg  rmsynth-casa.fullim.cfg  rmsynth-fullim.cfg  rmsynth-jennifer.fullim.cfg  rmsynth-sim-fullim.cfg  rmsynth-subim.cfg  rmsynth.cfg  test_my_casa_q_u.cfg
cfg/ARCHIVED/: README.md  align_fits_image.cfg  comb_fits_image.cfg  comb_fits_image_PBAND_minus_LBAND_CASA.cfg  combine_lp_pa_to_qu.cfg  compare_fits_image.cfg  compare_fits_image_3c468.1_maxloc_vs_maxthresh.cfg  compare_fits_image_3c468.1_maxpolRM_vs_dpol.cfg  cube_stat.cfg  fits2silo.cfg  (+53 more)
docker/: build_push_from_tag.sh  dockerfile
docs/: ARCHITECTURE.md  DESIGN_CPU_GPU_TIMELINE_AND_RM_BLOCKING.md  PARALLELISM.md  RELEASE_NOTES_2.0.md  RELEASE_NOTES_3.0.md  RELEASE_NOTES_4.0.md  RELEASE_NOTES_4.1.md  RELEASE_NOTES_5.0.md
planning/: ENCAPSULATION_REFACTOR_PLAN.md  IO_PARALLEL_OPTIMISATION_PLAN.md  MULTI_BAND_TOMOGRAPHY_PLAN.md
scratch/: run_rmsynthesis_test.sh
scripts/: benchmark_omp.py  check_fixed_form.sh  detabify_fixed_form.sh  make_sim_gmrt_rm_cube.py  plot_tile_async_swimlane.py  profile_rmsynth.sh
src/: ast_grf_stub.c  commonbeam.f90  convolve_cubes.f90  fort_lib.f  gaussft.f90  match_cubes.f90  myfits_info.f  myfits_info.f90  printerror.f90  reproject_cubes.f90  rm_synthesis.f  rm_synthesis.f90  rm_synthesis_mod.f90  rm_synthesis_mod.f90.bak
tests/: check_bad_channel_masking.py  check_rm_peak.py  check_thesis_scenario.py  compare_cubes.py  make_test_cubes.py  make_thesis_scenario_cubes.py  rmsynth-test.cfg.template  rmsynth-timing.cfg.template  run_tests.sh
(+199 files in other folders)
